<resources>
    <string name="app_name">PrimeNumbers</string>

    <string name="true_btn">True</string>
    <string name="false_btn">False</string>
    <string name="next_btn">Next</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_hint">Get Your Hint!!</string>
    <string name="hint_btn1"><u>Show Hint</u></string>
    <string name="hint_btn">Hint</string>
    <string name="cheat_btn1"><u>Show Answer</u></string>
    <string name="back_btn">Back</string>
    <string name="cheat_btn">Cheat</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_cheat">Get Your Solution!!</string>
</resources>
